[package]
name = "donasihook"
version = "0.1.0"
authors = ["abumuhammad <me.abumuhammad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.0.2"
actix-http = "2.0.0"
actix-service = "1.0.6"
futures = "0.3.5"

dotenv = "0.15.0"
config = "0.10.1"

slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"

tokio = { version = "0.2", features = ["full"] }
serde = "1.0.116"
surf = "1.0.3"
async-std = "1.6.4"
serde_json = "1.0.57"
http = "0.2.1"
async-trait = "0.1.40"

[dev-dependencies]
lazy_static = "1.4.0"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]

